Add recommended setups section below the calculator
8 speed-range cards (35–80+ km/h) with predefined cylinder/carb/gearing/exhaust
setups rendered via JS. Each card has an "Anwenden" button that sets the
dropdowns and triggers the speed calculation.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 </div>
             </div>
         </div>
+
+        <div class="recommendations">
+            <h2 class="recommendations-title">Empfohlene Setups</h2>
+            <div id="recommendations-list"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
