--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 
         <div class="recommendations">
             <h2 class="recommendations-title">Empfohlene Setups</h2>
+            <div class="rec-input-group">
+                <label for="wunschgeschwindigkeit">Wunschgeschwindigkeit</label>
+                <div class="rec-input-wrapper">
+                    <input type="number" id="wunschgeschwindigkeit" min="0" placeholder="z.B. 55">
+                    <span class="rec-input-unit">km/h</span>
+                </div>
+            </div>
             <div id="recommendations-list"></div>
         </div>
     </div>
