Redesign recommendations: single large input, dynamic result only
Remove the static list of all 8 setup cards. Center a large number input
as the hero element. On input, only the matching speed-range card renders
below it. Empty/invalid input shows a placeholder. Removed highlightRec,
rec-card--active, rec-input-group styles that are no longer needed.

--- a/index.html
+++ b/index.html
@@ -106,13 +106,10 @@
         </div>
 
         <div class="recommendations">
-            <h2 class="recommendations-title">Empfohlene Setups</h2>
-            <div class="rec-input-group">
-                <label for="wunschgeschwindigkeit">Wunschgeschwindigkeit</label>
-                <div class="rec-input-wrapper">
-                    <input type="number" id="wunschgeschwindigkeit" min="0" placeholder="z.B. 55">
-                    <span class="rec-input-unit">km/h</span>
-                </div>
+            <h2 class="recommendations-title">Wunschgeschwindigkeit</h2>
+            <div class="rec-input-wrapper">
+                <input type="number" id="wunschgeschwindigkeit" min="0" placeholder="55">
+                <span class="rec-input-unit">km/h</span>
             </div>
             <div id="recommendations-list"></div>
         </div>
